Further validation and navigation fixes

--- a/web/assessment.html
+++ b/web/assessment.html
@@ -28,7 +28,7 @@
             <a href="index.html" class="header-icon btnNavigate secondGuide stepOne">
                 <i class="fas fa-home"></i>
             </a>
-            <a href="index.html" class="header-icon btnEditTemplate secondGuide stepTwo">
+            <a id="btnEditTemplate" class="header-icon btnEditTemplate secondGuide stepTwo">
                 <i title="Edit Template" class="fas fa-file-invoice"></i>
             </a>
             <div class="dropdown_container">
