--- a/web/edit-assessment.html
+++ b/web/edit-assessment.html
@@ -58,6 +58,7 @@
 
         <div class="header-icon-container">
             <div class="header-icon btnInitializeSave thirdGuide stepSix"><i title="Save" class="fas fa-save"></i></div>
+            <div id="clipboadIcon" class="header-icon btnUseTemplate d-none"><i title="Use Template" class="fas fa-clipboard-list"></i></div>
         </div>
 
     </div>
@@ -261,7 +262,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" data-dismiss="modal">Later</button>
-                    <button id="btnUseTemplate" class="btn btn-primary">Use</a>
+                    <button class="btn btn-primary btnUseTemplate">Use</a>
                 </div>
             </div>
         </div>
