--- a/web/setup/presentations.html
+++ b/web/setup/presentations.html
@@ -34,7 +34,7 @@
             </div>
             <div class="col-8">
                 <label for="txtStudentName">Presentation Topic</label>
-                <input type="text" class="form-control" id="txtPresentationName" placeholder="Enter Presentation Topic">
+                <input type="text" class="form-control" id="txtPresentationName" placeholder="Enter Presentation Topic" maxlength="60">
             </div>
         </div>
         <br />
