--- a/web/setup/students.html
+++ b/web/setup/students.html
@@ -27,11 +27,11 @@
         <div class="row">
             <div class="col-4">
                 <label for="txtStudentID">Student ID</label>
-                <input type="text" class="form-control" id="txtStudentID"placeholder="Enter Student ID">
+                <input type="text" class="form-control numberOnly" id="txtStudentID"placeholder="Enter Student ID" maxlength="10">
             </div>
             <div class="col-8">
                 <label for="txtStudentName">Student Name</label>
-                <input type="text" class="form-control" id="txtStudentName" placeholder="Enter Student Name">
+                <input type="text" class="form-control" id="txtStudentName" placeholder="Enter Student Name" maxlength="60">
             </div>
         </div>
         <br />
